--- a/style.css
+++ b/style.css
@@ -241,3 +241,6 @@ body.christmas .subtitle {
     color: #ffffff !important;
     text-shadow: 0 0 4px rgba(0,0,0,0.45);
 }
+#gewinnspiel {
+  text-align: center;
+}
