--- a/style.css
+++ b/style.css
@@ -344,3 +344,18 @@ body.christmas .subtitle {
         padding: 0 10px;
     }
 }
+.bottom-link {
+    text-align: center;
+    margin: 20px 0 40px 0;
+}
+
+.bottom-link a {
+    font-size: 15px;
+    color: #2e7d32;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.bottom-link a:hover {
+    text-decoration: underline;
+}
